# megatile

./: AGENT.md  AGENTS.md  Cargo.toml  FIX_MONITORS.md  IMPROVEMENTS.md  PLAN.md  README.md  STEP_1.md  STEP_10.md  STEP_11.md  STEP_12.md  STEP_13.md  STEP_14.md  STEP_15.md  STEP_16.md  STEP_2.md  STEP_3.md  STEP_4.md  STEP_5.md  STEP_6.md  STEP_7.md  STEP_8.md  STEP_8_TESTING.md  STEP_9.md  TODO.md  TODO_NEXT.md
src/: hotkeys.rs  logging.rs  main.rs  statusbar.rs  tiling.rs  tray.rs  windows_lib.rs  workspace.rs  workspace_manager.rs
