[package]
name = "megatile"
version = "0.2.0"
edition = "2024"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
]}
tray-icon = "0.14"
ctrlc = "3.4"
