[package]
name = "megatile"
version = "0.2.1"
edition = "2024"

[dependencies]
argh = "0.1"
ctrlc = "3.4"
flexi_logger = "0.27"
log = "0.4"
tray-icon = "0.14"
windows = { version = "0.62", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
]}
